# flux-orm-workspace

./: Cargo.toml  README.md  docker-compose.yml
docs/: flux_orm_description.md  flux_orm_integration_guide.md  flux_orm_value_guide.md
flux-orm/: Cargo.toml
flux-orm-derive/: Cargo.toml
flux-orm-derive/src/: lib.rs
flux-orm/src/: lib.rs
flux-orm/src/backend/: bind_param.rs  common_models.rs  errors.rs  migration.rs  mod.rs  row_mapper.rs  schema.rs  where_models.rs
flux-orm/src/core/: executor.rs  mod.rs  model.rs  transaction.rs
flux-orm/src/driver/: dialect.rs  mod.rs  model.rs  mysql.rs  postgres.rs  sqlite.rs
flux-orm/src/query/: builder.rs  condition.rs  field_builder.rs  mod.rs
flux-orm/tests/: common_models_tests.rs  integration_test.rs
