[workspace]
members = ["flux-orm", "flux-orm-derive"]
resolver = "2"

[workspace.package]
version = "3.0.0"
edition = "2024"
authors = ["Maxim Bogovic <bogovick@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/flux-orm"

[workspace.dependencies]
# Shared dependencies
tokio = { version = "1.48.0", features = ["full"] }
async-trait = "0.1.89"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "sqlite", "postgres", "mysql", "chrono", "uuid", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
thiserror = "2.0.17"
rust_decimal = "1.39.0"

# Proc-macro dependencies
syn = { version = "2.0.109", features = ["full", "extra-traits"] }
quote = "1.0.42"
proc-macro2 = "1.0.103"
darling = "0.21.3"